created views and templates for Departments

--- a/employee_app/templates/employee_app/employee_detail.html
+++ b/employee_app/templates/employee_app/employee_detail.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<a href="{% url 'employee_list_url' %}">Employee List</a>
 <table>
     <tr>
         <td>{{employee.first_name}}</td>
