--- a/employee_app/templates/employee_app/employee_list.html
+++ b/employee_app/templates/employee_app/employee_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <h2>
-    <a href="{% url 'employee_create_url'%}">Add</a>
+    <a href="{% url 'employee_create_url'%}">Add Employee</a>
 </h2>
 <table>
     <tr>
